--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-fastapi==0.95.0
+fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 alembic==1.12.1
-pydantic==1.10.13
+pydantic==2.5.0
+pydantic-settings==2.1.0
 email-validator==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 pytest==7.4.3
 httpx==0.25.2
 python-multipart==0.0.6
+python-dotenv==1.0.0
